--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
   "name": "electron-vue-template",
   "version": "1.0.0",
-  "description": "electron-vue-template",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "electron ./src/main/main.js"
+    "start": "electron ./src/main/main.js",
+    "dev": "node ./builder/dev.js",
+    "build": "node ./builder/build.js"
   },
-  "author": "***@iflytek.com",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^6.1.2"
+    "chalk": "^2.4.2",
+    "electron": "^6.1.2",
+    "html-webpack-plugin": "^3.2.0",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.2",
+    "vue-router": "^3.1.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1",
+    "webpack": "^4.41.2",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
