--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "babel-loader": "^8.0.6",
     "chalk": "^2.4.2",
-    "electron": "^6.1.2",
+    "electron": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.2",
