--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.7",
-    "babel-loader": "^8.0.6",
+    "archiver": "^3.1.1",
+    "autoprefixer": "^9.7.4",
     "chalk": "^2.4.2",
-    "electron": "^7.1.2",
+    "css-loader": "^3.4.2",
+    "electron": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.2",
     "vue-router": "^3.1.3",
