--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/polyfill": "^7.8.7",
         "@babel/preset-env": "^7.9.6",
+        "@electron/remote": "^2.0.9",
         "adm-zip": "^0.4.14",
         "archiver": "^4.0.1",
         "autoprefixer": "^9.7.6",
@@ -80,9 +81,9 @@
         "babel-loader": "^8.1.0",
         "css-hot-loader": "^1.4.4",
         "css-loader": "^3.5.3",
-        "electron": "^8.1.1",
+        "electron": "^24.2.0",
         "electron-builder": "^22.4.0",
-        "electron-settings": "3.2.0",
+        "electron-settings": "^4.0.2",
         "file-loader": "^6.0.0",
         "html-webpack-plugin": "^4.3.0",
         "less": "^3.11.1",
