--- a/package.json
+++ b/package.json
@@ -88,10 +88,14 @@
         "electron-builder": "^22.4.0",
         "electron-settings": "^4.0.2",
         "file-loader": "^6.0.0",
-        "html-webpack-plugin": "^4.3.0",
+        "fs-extra": "^11.1.1",
+        "html-loader": "^4.2.0",
+        "html-webpack-plugin": "^5.5.1",
         "less": "^3.11.1",
         "less-loader": "^6.1.0",
-        "mini-css-extract-plugin": "^0.9.0",
+        "markdown-loader": "^8.0.0",
+        "marked": "^5.0.1",
+        "mini-css-extract-plugin": "^2.7.5",
         "postcss-loader": "^3.0.0",
         "progress-bar-webpack-plugin": "^2.1.0",
         "url-loader": "^4.1.0",
@@ -101,7 +105,7 @@
         "vue-router": "^3.1.6",
         "vue-template-compiler": "^2.6.11",
         "vuex": "^3.4.0",
-        "webpack": "^4.43.0",
-        "webpack-dev-server": "^3.11.0"
+        "webpack": "^5.82.0",
+        "webpack-dev-server": "^4.15.0"
     }
 }
