--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
         "mini-css-extract-plugin": "^2.7.5",
         "postcss-loader": "^3.0.0",
         "progress-bar-webpack-plugin": "^2.1.0",
+        "url": "^0.11.0",
         "url-loader": "^4.1.0",
         "view-design": "^4.7.0",
         "vue": "^2.6.11",
